overflow of postbody fixed ?! i cant test becoz i cant see that problem in ff

--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -405,9 +405,6 @@ ul ul .side-place-item-image {
     //margin-left: 22px;
     transition: $animation-dur;
   }
-  > div {
-    align-items: center;
-  }
 }
 .side-profile > a > div:hover {
   transition-duration: $animation-dur;
