--- a/src/app/post/post.scss
+++ b/src/app/post/post.scss
@@ -217,7 +217,7 @@
 
 .comment-msg {
   margin-bottom: 83px;
-  justify-content: space-between;
+  justify-content: inherit;
   div:last-child {
     flex-grow: 1!important;
   }
